cmake_minimum_required(VERSION 3.0)

project(DesignPattern VERSION 1.0.0)

set(Pattern "Default" CACHE STRING "Helpstring")

add_subdirectory(CommonTool)

if(Pattern STREQUAL "Singleton")
    add_subdirectory(Singleton)
elseif(Pattern STREQUAL "SimpleFactory")
    add_subdirectory(SimpleFactory)
elseif(Pattern STREQUAL "FactoryMethod")
    add_subdirectory(FactoryMethod)
elseif(Pattern STREQUAL "AbstractFactory")
    add_subdirectory(AbstractFactory)
elseif(Pattern STREQUAL "Prototype")
    add_subdirectory(Prototype)
elseif(Pattern STREQUAL "Builder")
    add_subdirectory(Builder)
elseif(Pattern STREQUAL "Adapter")
    add_subdirectory(Adapter)
elseif(Pattern STREQUAL "Bridge")
    add_subdirectory(Bridge)
elseif(Pattern STREQUAL "Composite")
    add_subdirectory(Composite)
elseif(Pattern STREQUAL "Decorator")
    add_subdirectory(Decorator)
elseif(Pattern STREQUAL "Facade")
    add_subdirectory(Facade)
elseif(Pattern STREQUAL "Flyweight")
    add_subdirectory(Flyweight)
elseif(Pattern STREQUAL "Proxy")
    add_subdirectory(Proxy)
elseif(Pattern STREQUAL "ChainofResponsibility")
    add_subdirectory(ChainofResponsibility)
elseif(Pattern STREQUAL "Command")
    add_subdirectory("Command")
else()
    message(FATAL_ERROR  "The ${Pattern} is not supported!")
endif()
